# gecbf

./: .gitignore
centralized/src/disturbance_publisher/: CMakeLists.txt  package.xml
centralized/src/disturbance_publisher/src/: disturbance_publisher_node.cpp
centralized/src/drones_simulation/distance_logger/: CMakeLists.txt  package.xml
centralized/src/drones_simulation/distance_logger/src/: distance_logger_node.cpp
centralized/src/drones_simulation/drone_dynamic/: CMakeLists.txt  package.xml
centralized/src/drones_simulation/drone_dynamic/include/drone_dynamic/: Quadrotor.hpp
centralized/src/drones_simulation/drone_dynamic/src/: Quadrotor.cpp  drone_dynamic_node.cpp
centralized/src/drones_simulation/map_generator/: CMakeLists.txt  package.xml
centralized/src/drones_simulation/map_generator/src/: random_forest_sensing.cpp  random_sphere_map.cpp
centralized/src/drones_simulation/plan_env/: CMakeLists.txt
centralized/src/drones_simulation/plan_env/include/plan_env/: grid_map.h
centralized/src/drones_simulation/plan_env/src/: grid_map.cpp
centralized/src/drones_simulation/quadrotor_msgs/: CMakeLists.txt
centralized/src/drones_simulation/quadrotor_msgs/msg/: Force3.msg  ForceTau.msg
centralized/src/drones_simulation/rviz_plugins/: CMakeLists.txt
centralized/src/drones_simulation/sphere_detector/: CMakeLists.txt  package.xml
centralized/src/drones_simulation/sphere_detector/include/sphere_detector/: sphere_detector.hpp
centralized/src/drones_simulation/sphere_detector/src/: sphere_detector.cpp
centralized/src/drones_simulation/trajectory_visualization/: CMakeLists.txt  package.xml
centralized/src/drones_simulation/trajectory_visualization/src/: trajectory_visualization.cpp
centralized/src/gcbf_qp_solver/: CMakeLists.txt  package.xml
centralized/src/gcbf_qp_solver/include/gcbf_qp_solver/: gcbf.hpp  gcbf_min.hpp
centralized/src/gcbf_qp_solver/launch/: four_drones_exchange.launch  rviz.launch  single_drone.launch  swarm.launch  three_drones_with_ob.launch
centralized/src/gcbf_qp_solver/launch/include/: advanced_param.xml  default.rviz  run_in_sim.xml  simulator.xml
centralized/src/gcbf_qp_solver/src/: gcbf.cpp  gcbf_min.cpp  gcbf_qp_node.cpp  gcbf_qp_node_min.cpp
centralized/src/gcbf_qp_solver/test_symbol_cal/: coefficients.cpp  dynamic.py  f_figure.py  h_param.py  plot.py  quadrotor_dynamics.cpp  quadrotor_dynamics_eigen.cpp  temp.py  test_sym_cal.py
centralized/src/gecbf/: CMakeLists.txt  package.xml
centralized/src/gecbf/include/gecbf/: gecbf.hpp  gecbf_min.hpp
centralized/src/gecbf/launch/: debug.launch  four_drones_exchange.launch  four_drones_obstacles.launch  rviz.launch  single_drone.launch  single_drone_more_obs.launch  swarm.launch  three_drones_with_ob.launch  two_drones_exchange.launch
centralized/src/gecbf/launch/include/: advanced_param.xml  default.rviz  run_in_sim.xml  simulator.xml
centralized/src/gecbf/src/: gecbf.cpp  gecbf_min.cpp  gecbf_node.cpp  gecbf_node_min.cpp
centralized/src/nominal_controller/: CMakeLists.txt  package.xml
centralized/src/nominal_controller/include/nominal_controller/: pd_controller.h
centralized/src/nominal_controller/src/: nominal_controller_node.cpp  pd_controller.cpp
centralized/src/nominal_controller/test_symbol_cal/: linearized_dynamic.txt  linearized_dynamics.cpp  linearized_matrices.tex  linearized_matrices_v2.tex  sym2.py  sym_cal.py  sym_compare.py  sym_temp.py  temp.tex
centralized/src/task_publisher/: CMakeLists.txt  package.xml
centralized/src/task_publisher/src/: task_publisher_node.cpp
