<?xml version="1.0"?>
<package format="2">
  <name>disturbance_publisher</name>
  <version>0.0.0</version>
  <description>Publishes configurable force and moment disturbances for drone simulation.</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>to do</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
